# serde_python

./: Cargo.toml  README.md
serde_python/: Cargo.toml
serde_python/src/: lib.rs
serde_python_derive/: Cargo.toml
serde_python_derive/src/: lib.rs
serde_python_test/: Cargo.toml
serde_python_test/src/: lib.rs
src/: lib.rs
