[package]
name = "serde_python"
description = "Uses serde to convert structs to Python"
license = "MIT"
readme = "README.md"
repository = "https://github.com/spease/serde_python.git"
version = "0.1.1"
authors = ["Steven Pease <peasteven@gmail.com>"]

[dependencies]
cpython = "0.2.0"
serde = "1.0.43"
serde_python_derive = "0.1"
heck = "0.3.0"
